--- a/public/500.html
+++ b/public/500.html
@@ -1,57 +1,100 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>The page you were looking for doesn't exist (404)</title>
   <style>
-  body {
-    background-color: #EFEFEF;
-    color: #2E2F30;
+  body { 
+    line-height: 1.4em;
+    font-size: 1em;
+  }
+
+  #wrapper {
+    width: 100%;
+    padding-top: 1em;
+  }
+
+  img {
+    display: block; 
+    max-width: 100%;
+    margin: 0 auto;
+  }
+
+  .content {
+    width: 100%;
+    margin: 0 auto;
     text-align: center;
-    font-family: arial, sans-serif;
   }
 
-  div.dialog {
-    width: 25em;
-    margin: 4em auto 0 auto;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 4em 0 4em;
+  h1 { 
+    font-weight: 400;
+    font-size: 1.8em;
+    color: #333;
+    line-height: 1.2em;
+      
   }
 
-  h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
+  p { 
+    font-size: 1.2em;
+    font-weight: 300;
+    color: #333;
+    line-height: 1.2em;
+    margin-bottom: 1.5em;
+
   }
 
-  body > p {
-    width: 33em;
-    margin: 0 auto 1em;
-    padding: 1em 0;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow:0 3px 8px rgba(50, 50, 50, 0.17);
+  a { 
+    color: #e74c3c; 
+    text-decoration: none; 
+  }
+
+  a:hover { 
+    color: #333; 
+    text-decoration: none; 
+  }
+
+  #buttons {
+    width: 100%;
+      margin: 0 auto;
+      text-align: center;
+  }
+
+  .button {
+      display: block;
+      margin: 5px auto;
+      color: #FAFAFA;
+      text-decoration: none;
+      line-height: 2em;
+      font-size: 1.2em;
+      width: 13em;
+      height: 2em;
+      border-radius: 4px;
+      background-clip: padding-box;
+      box-shadow: 0 1px 0px rgba(0,0,0,.1), inset 0 1px 0 rgba(255,255,255,0.2), inset 0 0 5px rgba(255,255,255,.38);
+      background-image: linear-gradient(bottom, rgba(255,255,255,0) 0%, rgba(255,255,255,.26) 100%);
+  }
+
+  .red {
+    border: 1px solid #ce3a2b;
+    background-color: #e74c3c;
+  }
+
+  .green {
+    border: 1px solid #B1D978;
+    background-color: #B5DC7F;
   }
   </style>
 </head>
-
-<body>
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <h1>We're sorry, but something went wrong.</h1>
-  </div>
-  <p>If you are the application owner check the logs for more information.</p>
-</body>
+  <body>
+    <div id="wrapper">
+      <img src="/assets/server.gif" alt="Server" height="200" width="170"> 
+      <div class="content">
+        <h1>There's a badger in the code!</h1>
+        <p>We apologize for any inconvenience.</p>
+        <div id="buttons">
+          <a class="button green" href="/badger">Take me home!</a>
+          <a class="button red" href="mailto:info@nohm.eu">Shout at the admin!</a>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
