--- a/public/422.html
+++ b/public/422.html
@@ -86,7 +86,7 @@
 </head>
   <body>
     <div id="wrapper">
-      <img src="/assets/server.gif" alt="Server" height="200" width="170"> 
+      <img src="/server.gif" alt="Server" height="200" width="170"> 
       <div class="content">
         <h1>The badger doesn't want you to touch this!</h1>
         <p>We apologize for any inconvenience.</p>
