--- a/public/422.html
+++ b/public/422.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The page you were looking for doesn't exist (404)</title>
+  <title>The badger doesn't want you to touch this! (422)</title>
   <style>
   body { 
     line-height: 1.4em;
