--- a/public/500.html
+++ b/public/500.html
@@ -86,7 +86,7 @@
 </head>
   <body>
     <div id="wrapper">
-      <img src="/badger/assets/images/server.gif" alt="Server" height="200" width="170"> 
+      <img src="server.gif" alt="Server" height="200" width="170"> 
       <div class="content">
         <h1>There's a badger in the code!</h1>
         <p>We apologize for any inconvenience.</p>
